fixed word wrap and inner well margin

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@
 
 .shadow-color {background: #888888;}
 
+* {
+    word-wrap: break-word;
+}
+
 html, body {
     font-family: Roboto, Arial, sans-serif;
 }
@@ -28,6 +32,11 @@ code {
 
 .centered {
     text-align: center;
+}
+
+/* nested wells get reduced margins*/
+.well > .well {
+    margin: 10px;
 }
 
 /* homepage */
@@ -119,3 +128,4 @@ code {
     font-size: 20px;
     padding-bottom: 70px
 }
+
